Fix overflow on small screens.

--- a/assets/css/body.css
+++ b/assets/css/body.css
@@ -45,5 +45,13 @@ article img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 75%;
+	max-width: 90%;
+}
+@media only screen and (max-width: 750px) {
+	article {
+		width: 100%;
+	}
+	article img {
+		max-width: 100%;
+	}
 }
